--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<header>
 		<h1>
-			<МЕТАТЕГИ>
+			&lt;МЕТАТЕГИ&gt;
 		</h1>
 	</header>
 	<nav>
@@ -86,7 +86,6 @@
 			документе и выбирает необходимую кодировку автоматически. Браузер не всегда может точно распознать язык
 			веб-страницы и в некоторых случаях предлагает вьетнамскую кодировку вместо кириллицы. По этой причине лучше
 			всегда указывать приведенную строчку.</p>
-		</p>
 		<br>
 	</main>
 	<footer>
